--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 /* Base styling */
 :root {
-  --primary-color: #e65d37;
+  --primary-color: #37b7e6;
   --secondary-color: #555;
   --background-color: #f4f4f9;
   --border-color: #ddd;
